<resources>
    <!-- Login & Signup -->
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="logo">Logo</string>
    <string name="submit">Submit</string>
    <string name="country">Country</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>

    <!-- Sidebar items -->
    <string name="dictation">Dictation</string>
    <string name="ranking">Ranking</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <!-- Texts -->
    <string name="choose_language_and_difficulty">Choose language and difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!-- Game -->
    <string name="press_the_button">Press the button to play</string>
    <string name="progress">Progress</string>
    <string name="language">Language: %1$s</string>
    <string name="difficulty">Difficulty: %1$s</string>
    <string name="best_score">Best score: %1$d</string>
    <string name="level">Level</string>
    <string name="total_score">Total score</string>

    <!-- Ranking -->
    <string name="top">Top</string>
    <string name="of">of</string>

    <!-- Friends -->
    <string name="searchbox">Search by username</string>

    <!-- Global -->
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Open sidebar</string>
    <string name="navigation_drawer_close">Close sidebar</string>

    <!-- Global errors -->
    <string name="text_error_unknown">Unknown error</string>

    <!-- SplashActivity -->
    <string name="button_exit">Exit</string>
    <string name="button_go_to_play_store">Play Store</string>
    <string name="message_new_api_version">There is a new available version. Do you want to download it?</string>

    <!-- WebService -->
    <string name="message_no_internet">You should have an Internet connection, in order to use this application</string>
    <string name="message_server_error">There was a server error. Please try again later</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


</resources>
