<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dictation"
            android:icon="@drawable/ic_dictation"
            android:title="@string/dictation" />
        <item
            android:id="@+id/nav_ranking"
            android:icon="@drawable/ic_ranking"
            android:title="@string/ranking" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_door"
            android:title="@string/log_out" />
    </group>

</menu>
