<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="134dp"
        app:srcCompat="@android:drawable/alert_dark_frame"
        android:id="@+id/ranking_flag" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:text="@string/top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/cnt_ranking_input"
            android:gravity="center_vertical|fill_horizontal"
            android:text="10"
            android:textAlignment="center"
            android:layout_width="43dp" />

        <TextView
            android:text="@string/of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/country"
            android:id="@+id/country_ranking_input"
            android:gravity="center_vertical|center_horizontal"
            android:textAlignment="center"
            android:layout_width="wrap_content" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ranking" />

</LinearLayout>