<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/editbox_dropdown_dark_frame"
        android:id="@+id/friend_flag"
        android:layout_weight="0.33" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showDividers="beginning|middle|end"
        android:divider="@color/blue">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:text="@string/country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:textColor="@color/black"
                android:gravity="right"
                android:padding="8dp" />

            <TextView
                android:text="@string/country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/friend_country_label"
                android:textColor="@color/black"
                android:gravity="left"
                android:layout_weight="1.0"
                android:padding="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:text="@string/level"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView8"
                android:layout_weight="1.0"
                android:textColor="@color/black"
                android:gravity="right"
                android:padding="8dp" />

            <TextView
                android:text="@string/level"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/friend_level_label"
                android:textColor="@color/black"
                android:gravity="left"
                android:layout_weight="1.0"
                android:padding="8dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:text="@string/total_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView9"
                android:layout_weight="1.0"
                android:textColor="@color/black"
                android:gravity="right"
                android:padding="8dp" />

            <TextView
                android:text="@string/total_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/friend_total_score_label"
                android:textColor="@color/black"
                android:gravity="left"
                android:layout_weight="1.0"
                android:padding="8dp" />
        </TableRow>

    </TableLayout>

    <Button
        android:text="@string/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_exit"
        android:background="@color/color_accent"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</LinearLayout>